--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 aniso8601==7.0.0
+astroid==2.2.5
+autopep8==1.4.4
 Click==7.0
 Flask==1.1.1
 Flask-GraphQL==2.0.0
@@ -7,12 +9,22 @@ graphene-sqlalchemy==2.2.2
 graphql-core==2.2.1
 graphql-relay==2.0.0
 graphql-server-core==1.1.1
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lazy-object-proxy==1.4.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
+pep8==1.7.1
 promise==2.2.1
+psycopg2==2.8.3
+pycodestyle==2.5.0
+pylint==2.3.1
+python-dotenv==0.10.3
 Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.12.0
 SQLAlchemy==1.3.7
+typed-ast==1.4.0
 Werkzeug==0.15.5
+wrapt==1.11.2
